<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.FragmentPerfil">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/item_perfil"
            android:src="@drawable/ic_account"
            android:layout_marginTop="30dp"
            android:scaleType="centerCrop"
            android:layout_centerHorizontal="true"
            android:layout_width="120dp"
            android:layout_height="120dp" />

        <!-- Nombres -->
        <TextView
            android:id="@+id/txt_nombres"
            android:text="@string/txt_nombres"
            android:layout_below="@+id/item_perfil"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_nombres"
            android:text="@string/tv_nombres"
            android:layout_below="@+id/txt_nombres"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Email -->
        <TextView
            android:id="@+id/txt_email"
            android:text="@string/txt_email"
            android:layout_below="@+id/tv_nombres"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_email"
            android:text="--"
            android:layout_below="@+id/txt_email"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Teléfono -->
        <TextView
            android:id="@+id/txt_telefono"
            android:text="@string/txt_telefono"
            android:layout_below="@+id/tv_email"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_telefono"
            android:text="--"
            android:layout_below="@+id/txt_telefono"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Fecha de Nacimiento -->
        <TextView
            android:id="@+id/txt_fecha_nacimiento"
            android:text="@string/txt_fecha_nacimiento"
            android:layout_below="@+id/tv_telefono"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_fecha_nacimiento"
            android:text="--"
            android:layout_below="@+id/txt_fecha_nacimiento"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Puntos Actuales -->
        <TextView
            android:id="@+id/txt_puntos"
            android:text="@string/txt_puntos_actuales"
            android:layout_below="@+id/tv_fecha_nacimiento"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/coffee_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_puntos"
            android:text="0"
            android:layout_below="@+id/txt_puntos"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/coffee_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Nivel de Lealtad -->
        <TextView
            android:id="@+id/txt_nivel"
            android:text="@string/txt_nivel_lealtad"
            android:layout_below="@+id/tv_puntos"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_nivel"
            android:text="Bronce"
            android:layout_below="@+id/txt_nivel"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Compras Totales -->
        <TextView
            android:id="@+id/txt_compras_totales"
            android:text="@string/txt_compras_totales"
            android:layout_below="@+id/tv_nivel"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_compras_totales"
            android:text="$0"
            android:layout_below="@+id/txt_compras_totales"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Puntos para Siguiente Nivel -->
        <TextView
            android:id="@+id/txt_puntos_siguiente"
            android:text="@string/txt_puntos_siguiente_nivel"
            android:layout_below="@+id/tv_compras_totales"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_puntos_siguiente"
            android:text="0"
            android:layout_below="@+id/txt_puntos_siguiente"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Última Visita -->
        <TextView
            android:id="@+id/txt_ultima_visita"
            android:text="@string/txt_ultima_visita"
            android:layout_below="@+id/tv_puntos_siguiente"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_ultima_visita"
            android:text="--"
            android:layout_below="@+id/txt_ultima_visita"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Tiempo de registro -->
        <TextView
            android:id="@+id/txt_registro"
            android:text="@string/txt_registro"
            android:layout_below="@+id/tv_ultima_visita"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_registro"
            android:text="@string/tv_registro"
            android:layout_below="@+id/txt_registro"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/UpdateUserData"
            android:text="@string/btn_UpdateUserData"
            android:textAllCaps="true"
            app:cornerRadius="30dp"
            android:layout_below="@+id/tv_registro"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_historial"
            android:text="@string/historial"
            android:textAllCaps="true"
            app:cornerRadius="30dp"
            android:layout_below="@+id/UpdateUserData"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            app:cornerRadius="30dp"
            android:id="@+id/btn_Logout"
            android:text="@string/btn_Logout"
            android:textAllCaps="true"
            android:layout_below="@+id/btn_historial"
            android:layout_marginTop="15dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</ScrollView>