<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecuperarPassActivity">

    <RelativeLayout
        android:id="@+id/toolbarRL"

        android:layout_width="match_parent"
        android:layout_height="55dp">

        <ImageButton
            android:src="@drawable/ic_back"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:id="@+id/imgBack"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </ImageButton>

        <TextView
            android:text="@string/txt_forgotPass"
            android:id="@+id/txt_ForgotPass"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>

        <View
            android:background="#cccccc"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1dp">

        </View>
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_below="@+id/toolbarRL"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_recuperar"
            android:layout_width="70dp"
            android:layout_height="70dp">

        </ImageView>

        <TextView
            android:text="@string/txt_SendCode"
            android:id="@+id/txt_SendCode"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lb_EmailR"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            android:layout_below="@+id/txt_SendCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_Email"
                android:hint="@string/lb_Email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_SendCode"
            android:text="@string/btn_SendCode"
            android:layout_alignParentBottom="true"
            android:textAllCaps="true"
            app:cornerRadius="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.button.MaterialButton>
    </RelativeLayout>

</RelativeLayout>